--- a/styles/style.css
+++ b/styles/style.css
@@ -3,44 +3,77 @@ body {
 }
 
 header {
-	background: #BBBBBB;
-	padding: 20px 0;
+	background-color: #000000;
+	width: 100%;
+	
 }
 
-header .caixa img {
-	height: 177px;
-	width: 177px;
+.index {
+	text-decoration: none;
 }
 
 .caixa {
-	position: relative;
-	width: 940px;
 	margin: 0 auto;
+    width: 70%;
+    height: 120px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
 }
 
-nav {
-	position: absolute;
-	top: 85px;
-	right: 0;
-}
-
-nav li {
-	display: inline;
-	margin: 0 0 0 15px;
+.caixa h1 {
+	color: #fff;
+    margin-left: 5px;
+    color: #fff;
+    font-family: 'Gotham', sans-serif;
+    font-size: 40px;
 }
 
 nav a {
 	text-transform: uppercase;
-	color: #000000;
+	color: #fff;
 	font-weight: bold;
-	font-size: 22px;
+	font-size: 14px;
 	text-decoration: none;
 }
 
-nav a:hover {
-	color: #C78C19;
-	text-decoration: underline;
+nav a:hover{
+    color: rgb(150, 83, 83);
 }
+
+.imagem-Principal img{
+    width: 100%;
+    height: 400px;
+}
+
+.filme-destaque{
+	
+	margin-left: 50px;
+	height: 540px;
+	width: 50%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* align-items: flex-start; */
+}
+
+.filme-destaque .descricao{
+	font-size: 16px;
+    margin-top: 3px;
+    margin-bottom: 20px;
+    text-align: justify;
+    line-height: 25px;
+	color: #fff;
+}
+
+.titulo{
+    font-size: 40px;
+    padding-bottom: 15px;
+}
+
 
 .produtos {
 	width: 940px;
@@ -69,11 +102,11 @@ nav a:hover {
 }
 
 .produtos li:hover h2 {
-	font-size: 34px;
+	font-size: 24px;
 }
 
 .produtos h2 {
-	font-size: 30px;
+	font-size: 20px;
 	font-weight: bold;
 }
 
