--- a/styles/style_.css
+++ b/styles/style_.css
@@ -82,10 +82,8 @@ nav a:hover{
 }
 
 .produtos li {
-	height: 450px;
 	display: inline-block;
 	text-align: center;
-	background-color: #FFFFFF;
 	width: 30%;
 	vertical-align: top;
 	margin: 0 1.5%;
@@ -93,10 +91,6 @@ nav a:hover{
 	box-sizing: border-box;
 	border: 2px solid #000000;
 	border-radius: 10px;
-}
-
-.prd_servico li {
-	padding: 128px 20px;
 }
 
 .produtos li:hover {
@@ -137,12 +131,6 @@ footer img {
 	height: 177px;
 }
 
-.serviço_footer{
-	text-align: center;
-	background: url("../imgs/bg.jpg");
-	padding: 40px 0;
-}
-
 .copyright {
 	color: #FFFFFF;
 	font-size: 13px;
@@ -159,7 +147,6 @@ form {
 
 form label, form legend {
 	display:block;
-	color: #fff;
 	font-size: 20px;
 	margin: 0 0 10px;
 }
@@ -195,7 +182,6 @@ form label, form legend {
 
 table {
 	margin: 20px 0 40px;
-	color: #fff;
 }
 
 thead {
@@ -207,4 +193,101 @@ thead {
 td, th {
 	border: 1px solid #000000;
 	padding: 8px 15px;
+}
+
+
+/* css da página inicial */
+.banner {
+	width:100%;
+}
+
+.titulo-principal {
+	text-align: center;
+	font-size: 2em;
+	margin: 0 0 1em;
+	clear: left;
+}
+
+.principal {
+	padding: 3em 0;
+	background: #FEFEFE;
+	width: 940px;
+	margin: 0 auto;
+}
+
+.principal p {
+	margin: 0 0 1em;
+}
+
+.principal strong {
+	font-weight: bold;
+}
+
+.principal em {
+	font-style: italic;
+}
+
+.utensilios {
+	width: 120px;
+	float: left;
+	margin: 0 20px 20px 0;
+}
+
+.mapa {
+	padding: 3em 0;
+	background: linear-gradient(#FEFEFE, #888888);
+}
+
+.mapa-conteudo {
+	width: 940px;
+	margin: 0 auto;
+}
+
+.mapa p {
+	margin: 0 0 2em;
+	text-align: center;
+}
+
+.beneficios {
+	padding: 3em 0;
+	background: #888888;
+}
+
+.conteudo-beneficios {
+	width: 640px;
+	margin: 0 auto;
+}
+
+.lista-beneficios {
+	width: 40%;
+	display: inline-block;
+	vertical-align: top;
+}
+
+.itens {
+	line-height: 1.5;
+}
+
+.itens:first-child {
+	font-weight: bold;
+}
+
+.itens:before {
+	content: "🟊";
+}
+
+.imagem-beneficios {
+	width: 60%;
+	opacity: 1;
+	transition: 400ms;
+	box-shadow: 10px 10px 10px 0 #000000;
+}
+
+.imagem-beneficios:hover {
+	opacity: 0.3;
+}
+
+.video {
+	width: 560px;
+	margin: 2em auto;
 }
